--- a/Resolution.tex
+++ b/Resolution.tex
@@ -360,9 +360,9 @@ The measured resolution in data and simulation is corrected for an imbalance at 
  \begin{equation}
   c\mathrm{(Data/MC)_{PLI}} = \frac{\sqrt{2} \cdot \sigma^\mathrm{Data}_\mathrm{A}(\alpha_\mathrm{max} \rightarrow 0) \ominus f \cdot \sigma_\mathrm{PLI}}{\sqrt{2} \cdot \sigma^\mathrm{MC}_\mathrm{A}(\alpha_\mathrm{max} \rightarrow 0) \ominus f \cdot \sigma_\mathrm{PLI}}  
  \end{equation}
-with $f=0.75, 1.25$ respectively. The size of this variation is chosen by comparing the size of the PLI correction in simulated events from the nominal \pythia sample to the PLI correction estimated from simulated events obtained by the \herwig generator with tune EE3C. This comparison is illustrated in Fig.~\ref{fig:pli_comp} for the two central $|\eta|$ regions. Since the size of the PLI correction agrees within $25\%$ between both generators, the size of this uncertainty is justified.
+with $f=0.75, 1.25$ respectively. The size of this variation is chosen by comparing the size of the PLI correction in simulated events from the nominal \pythia sample to the PLI correction estimated from simulated events obtained by the \herwig generator with tune EE3C. This comparison is illustrated in Fig.~\ref{fig:pli_comp} for the two central $|\eta|$ regions. The size of the PLI correction agrees within $25\%$ between both generators.
  
- \item[Jet energy scale:] The jet energy scale has been corrected to particle level by the application of dedicated calibration factors. In order to propagate the uncertainty of the jet energy scale corrections to the data-to-simulation ratio of the resolution, all jet momenta in the simulated sample are shifted up and down by the JEC uncertainty. The jet momenta in data stay unchanged. Afterwards, the data-to-simulation is determined again based on the varied jet momenta.
+ \item[Jet energy scale:] The jet energy scale has been corrected to particle level by the application of dedicated calibration factors. In order to propagate the uncertainty of the jet energy scale corrections to the data-to-simulation ratio of the resolution, all jet momenta in the simulated sample are shifted up and down by the JEC uncertainty. The jet momenta in data stay unchanged. Afterwards, the data-to-simulation is redetermined based on the varied jet momenta.
 
  \begin{figure}[!tp]
   \centering
@@ -375,7 +375,7 @@ with $f=0.75, 1.25$ respectively. The size of this variation is chosen by compar
 \end{figure}
  
  \item[$\alpha$-spectrum:] To account for additional jet activity in the event, the measured widths of the asymmetry distributions are extrapolated to zero additional jet activity by a linear function. This linear behaviour is an empirically found relation rather than a theoretically fundamental connection. One influencing factor of the linear behaviour is the functional form of the $\alpha$-spectrum. It determines how many events are added to the asymmetry distribution in the next higher $\alpha$ interval and consequently how much the asymmetry distribution is broadened. This can result, \eg in a smaller or larger slope of the linear function or result in a non-linear behaviour. However, such effects might cancel in the ratio as long as the $\alpha$-spectrum is the same in data and simulation. \\
- The observed inclusive $\alpha$-spectrum in the simulated sample is compared to the spectrum in data and shown in Fig.~\ref{fig:syst_uncert_alpha_spec} (left). The bottom part displays the ratio $\rm{Data/MC}$. Since the ratio shows that both spectra do not agree, the influence of the $\alpha$-spectrum on the data-to-simulation ratio is evaluated by reweighting the $\alpha$-spectrum in simulated events to roughly match the one observed in data. The red curve overlaid in the ratio of the left distribution is used to reweight the events in the simulation. For each event a weight $w(\alpha)$ is calculated according to 
+ The observed inclusive $\alpha$-spectrum in the simulated sample is compared to the spectrum in data and shown in Fig.~\ref{fig:syst_uncert_alpha_spec} (left). The bottom part displays the ratio $\rm{Data/MC}$. Since the ratio shows that the spectra do not agree, the influence of the $\alpha$-spectrum on the data-to-simulation ratio is evaluated by reweighting the $\alpha$-spectrum in simulated events to match the one observed in data. The red curve overlaid in the ratio of the left distribution is used to reweight the events in the simulation. For each event a weight $w(\alpha)$ is calculated according to 
 \begin{equation}
 w(\alpha) = 0.545 \cdot \mathrm{(erf}(13.5 \cdot \alpha -0.02) +1))
 \end{equation}
@@ -396,7 +396,7 @@ In order to study the linear behaviour of the extrapolation also towards smaller
 
 \item[Non-Gaussian tails:] As discussed in Sec.~\ref{sec:jer_asymm_width_def}, the width of the asymmetry distribution is calculated as a truncated root-mean-square in order to reject contributions from non-Gaussian tails. The truncation was chosen to be 1.5\% for both data and simulation. In general, it is possible that the tail contributions in data and simulation differ and consequently do not cancel out in the ratio. In order to evaluate this effect the data-to-simulation ratio is calculated when truncating 5\% of the original distribution instead of 1.5\%.  
 
-\item[Flavour uncertainty:] As discussed in Sec.~\ref{sec:jer_response}, the jet response can be quite different for light-flavour ($u,d,s$) and heavy-flavour quarks ($c,b$). If the flavour composition is the same in data and simulation, this flavour difference cancels out in the data-to-simulation ratio. Since it is known that especially the rate of gluon splitting events with $g \rightarrow b\bar{b}$ is modelled wrong by about a factor of two~\cite{Khachatryan:2011wq}, the impact of heavy quarks produced in gluon splitting processes on the data-to-simulation ratio is evaluated by varying the event weights for simulated events with gluon splitting into heavy-flavour quarks.\\
+\item[Flavour uncertainty:] As discussed in Sec.~\ref{sec:jer_response}, the jet response can be quite different for light-flavour ($u,d,s,g$) and heavy-flavour jets ($c,b$). If the flavour composition is the same in data and simulation, this flavour difference cancels out in the data-to-simulation ratio. The rate of gluon splitting events with $g \rightarrow b\bar{b}$ is modelled wrong by up to a factor of two~\cite{Khachatryan:2011wq}, the impact of heavy quarks produced in gluon splitting processes on the data-to-simulation ratio is evaluated by varying the event weights for simulated events with gluon splitting into heavy-flavour quarks.\\
 An event is considered as gluon splitting event, if one of the two leading jets undergoes a gluon splitting identified by utilizing generator truth information. All events identified as gluon splitting into heavy-flavour quarks get an event weight of 1.5. Afterwards, the data-to-simulation ratio is derived as the resolution from data to the resolution in the reweighted simulated sample. 
 %An event is considered as gluon splitting event, if one of the two leading jets has a gluon jet flavour with respect to the physics definition for jet flavour. It is distinguished between gluon splitting into light and heavy jets by identifying if the jet considered as gluon in the physics definition has a b/c-flavour or a light flavour using the algorithmic definition. All events where at least one of the two leading jets is identified as a gluon splitting into heavy quarks get an event weight of 1.5. Afterwards the data-to-simulation ratio is derived as the resolution from data to the resolution in the reweighted simulated sample.
 
@@ -431,7 +431,7 @@ In order to test the assumption of a flat ratio, the data points are fitted with
 f(\pt) = \sqrt{\frac{(k_{NS} \cdot N)^2}{\pt^{2}} + \frac{(k_{NS} \cdot S)^2}{\pt} + (k_{C} \cdot C)^2} 
 \end{equation} 
 with parameters $N, S$ and $C$ fixed to the fit results from simulation. This function makes use of one common scale factor for parameters $N$ and $S$ and another one for $C$. Since there are no events with low transverse momenta available, no sensitivity to the special characteristics of $N$ is expected and hence no separate scale factor for $N$ is defined. Furthermore, this means that this procedure can not be used to study influences from pileup. \\
-Some example fits for the two most central $|\eta|$ intervals are summarized in Fig.~\ref{fig:NSC_Fits_3}. It turns out that typically the scale factors $k_{NS}$ and $k_{C}$ are not equal and thus a shape different from a constant could describe the measured data-to-simulation ratios as a function of \ptave as well. In order to illustrate how big this effect is, the ratio of the two fitted NSC-functions for data and simulation is shown together with the measured values and the constant fit in Fig.~\ref{fig:NSC_Fits_ratio}. It is visible that the ratio derived from the NSC-fits is also compatible with the measured values for the ratio. Consequently, a trend versus $\pt^\mathrm{ave}$ could be hidden in the measured points. The difference of the measured scale factors $k_{NS}$ and $k_{C}$ to the central value of the measurement from the constant fit amounts to about $2\%$ in the two central $|\eta|$ intervals. This is considered as systematic uncertainty for all $|\eta|$ intervals in order to compensate for this potentially hidden shape in the data-to-simulation ratio. Furthermore, this also covers possible differences of the scaling factors for jets with very low or very high transverse momenta which can not be directly measured in this analysis. Overall, this systematic uncertainty constitutes the major contribution to the total systematic uncertainty.
+Some example fits for the two most central $|\eta|$ intervals are summarized in Fig.~\ref{fig:NSC_Fits_3}. It turns out that typically the scale factors $k_{NS}$ and $k_{C}$ are not equal and thus a shape different from a constant could describe the measured data-to-simulation ratios as a function of \ptave as well. In order to illustrate how big this effect is, the ratio of the two fitted NSC-functions for data and simulation is shown together with the measured values and the constant fit in Fig.~\ref{fig:NSC_Fits_ratio}. The ratio derived from the NSC-fits is also compatible with the measured values for the ratio. The difference of the measured scale factors $k_{NS}$ and $k_{C}$ to the central value of the measurement from the constant fit amounts to about $2\%$ in the two central $|\eta|$ intervals. This is considered as systematic uncertainty for all $|\eta|$ intervals in order to compensate for this potentially hidden shape in the data-to-simulation ratio. This also covers possible differences of the scaling factors for jets with very low or very high transverse momenta which can not be directly measured in this analysis. Overall, this systematic uncertainty constitutes the major contribution to the total systematic uncertainty.
 \end{description}
 A summary of the data-to-simulation ratios measured with the dijet asymmetry method requiring that the two leading jets belong to the same $|\eta|$ interval together with all systematic uncertainties considered for the ratio is given in Tab.~\ref{tab:syst_uncert_summary}. Due to limited event numbers, no results could be determined for the two highest $|\eta|$ regions with this approach. In general, the measurement is limited by systematic effects which amount to uncertainties of about 2--2.5\% in the central detector part. However, in the $|\eta| \in [2.3, 2.8]$ region the measurement is limited by the statistical uncertainty.   
 
@@ -472,15 +472,15 @@ A summary of the data-to-simulation ratios measured with the dijet asymmetry met
 
 \section{Extension of the Method to the Forward Detector Region}
 \label{sec:jer_forward_extension}
-The presented measurement with results summarized in Tab.~\ref{tab:syst_uncert_summary} is utilizing the dijet asymmetry method based on the requirement that the two leading jets in an event belong both to the same $|\eta|$ region. Consequently, the resolution of these two jets is equal which results in the simple relation expressed in Eq.~\ref{eq:asymmdef} between asymmetry width and jet resolution. However, the requirement that both leading jets have to belong to the same $|\eta|$ interval reduces significantly the available number of events. Especially in the forward region of the detector this is a problem, as the jets in these events have low transverse momenta and consequently have to be triggered by the lowest $\pt^\mathrm{ave}$ triggers which are highly prescaled. Hence, the available number of events is small and for the intervals $|\eta| > 2.8$ no data-to-simulation ratio could be determined with this approach. \\
-In order to extend the analysis such that the data-to-simulation ratio can also be measured in the forward region of the detector, the requirement $i^{|\eta|}_{\mathrm{jet},1} = i^{|\eta|}_{\mathrm{jet},2}$ has to be dropped. Instead, events are selected in which the two leading jets belong to different pseudorapidity regions. Nonetheless, the jet resolution $\sigma (p_\mathrm{T}^{\mathrm{probe}})$ in a probe interval $|\eta_\mathrm{probe}|$ can be determined, if the resolution $\sigma (p_\mathrm{T}^{\mathrm{ref}})$ in a reference interval $|\eta_\mathrm{ref}|$ is known. \\
+The measurement presented above is based on the requirement that the two leading jets in an event both belong to the same $|\eta|$ region. Consequently, the resolution of these two jets is equal which results in the simple relation expressed in Eq.~\ref{eq:asymmdef} between asymmetry width and jet resolution. The requirement that both leading jets have to belong to the same $|\eta|$ interval reduces the available number of events significantly. This poses a problem, especially in the forward region of the detector, as the jets in these events have low transverse momenta and consequently have to be triggered by the highly prescaled lowest $\pt^\mathrm{ave}$ triggers. Hence, the available number of events is small and for the intervals $|\eta| > 2.8$ no data-to-simulation ratio could be determined with this approach. \\
+In order to extend the analysis such that the data-to-simulation ratio can also be measured in the forward region of the detector, the requirement that both leading jets have to belong to the same $|\eta|$ interval has to be dropped. Instead, events are selected in which the two leading jets belong to different pseudorapidity regions. The jet resolution $\sigma (p_\mathrm{T}^{\mathrm{probe}})$ in a probe interval $|\eta_\mathrm{probe}|$ can be determined, if the resolution $\sigma (p_\mathrm{T}^{\mathrm{ref}})$ in a reference interval $|\eta_\mathrm{ref}|$ is known. \\
 Based on Eq.~\ref{eq:asymm_first}, it can be shown that for $\langle p^\mathrm{probe}_\mathrm{T} \rangle = \langle p^\mathrm{ref}_\mathrm{T} \rangle = \langle \pt \rangle$ and $\sigma (p_\mathrm{T}^{\mathrm{probe}}) \neq \sigma (p_\mathrm{T}^{\mathrm{ref}})$ the relation
 \begin{equation}
  \label{eq:asymm_forward}
-  \frac{\sigma (p^\mathrm{probe}_\mathrm{T})}{\langle p_\mathrm{T} \rangle} = \sqrt{4 \cdot \sigma^{|\eta_{\mathrm{probe}|} \neq |\eta_{\mathrm{ref}}|}_{A} - \left(\frac{\sigma (p^\mathrm{ref}_\mathrm{T})}{\langle p_\mathrm{T} \rangle} \right)^2} 
+  \frac{\sigma (p^\mathrm{probe}_\mathrm{T})}{\langle p_\mathrm{T} \rangle} = \sqrt{4 \cdot \sigma^{|\eta_{\mathrm{probe}}| \neq |\eta_{\mathrm{ref}}|}_{A} - \left(\frac{\sigma (p^\mathrm{ref}_\mathrm{T})}{\langle p_\mathrm{T} \rangle} \right)^2} 
  \end{equation}
-is obtained. Here, $\sigma^{ |\eta_{\mathrm{probe}|} \neq |\eta_{\mathrm{ref}}|}_{A}$ is the width of the asymmetry calculated from the two leading jets in an event of which one jet belongs to a reference $|\eta|$ interval and the probe jet belongs to another $|\eta|$ region. The resolution of the jet in the reference interval has to be determined with the method imposing the same-$|\eta|$ requirement. The asymmetry width is meant to be corrected for additional jet activity and the particle-level imbalance determined from $\sigma^{|\eta_{\mathrm{probe}|} \neq |\eta_{\mathrm{ref}}|}_{A, \mathrm{gen}}$, \ie the asymmetry width of the generator asymmetry calculated for events in which the two leading jets do not belong to the same $|\eta|$ interval. The reference interval is preferred to be in the central detector region where the statistical precision from the same-$|\eta|$ measurement has already been sufficient. The statistical uncertainty of $\frac{\sigma (p^\mathrm{ref}_\mathrm{T})}{{\langle p_\mathrm{T} \rangle}}$ is propagated to the statistical uncertainty of $\frac{\sigma (p^\mathrm{probe}_\mathrm{T})}{\langle p_\mathrm{T} \rangle}$. \\
-As long as both jets belong to the same $|\eta|$ region, residual effects from jet energy scale differences in data and simulation affect both jets the same way and should not have an impact on the resolution measurement. Since residual effects from the jet energy scale, where the mean of the asymmetry is shifted and not exactly located at zero, become more important, if both jets belong to different probe and reference intervals, a slightly modified definition of the asymmetry of
+is obtained. Here, $\sigma^{ |\eta_{\mathrm{probe}}| \neq |\eta_{\mathrm{ref}}|}_{A}$ is the width of the asymmetry calculated from the two leading jets in an event of which one jet belongs to a reference $|\eta|$ interval and the probe jet belongs to another $|\eta|$ region. The resolution of the jet in the reference interval has to be determined with the method imposing the same-$|\eta|$ requirement. The asymmetry width is meant to be corrected for additional jet activity and the particle-level imbalance determined from $\sigma^{|\eta_{\mathrm{probe}}| \neq |\eta_{\mathrm{ref}}|}_{A, \mathrm{gen}}$. The latter is the asymmetry width of the generator asymmetry calculated for events in which the two leading jets do not belong to the same $|\eta|$ interval. The reference interval is chosen to be in the central detector region, where the statistical precision from the same-$|\eta|$ measurement already is sufficient. The statistical uncertainty of $\frac{\sigma (p^\mathrm{ref}_\mathrm{T})}{{\langle p_\mathrm{T} \rangle}}$ is propagated to the statistical uncertainty of $\frac{\sigma (p^\mathrm{probe}_\mathrm{T})}{\langle p_\mathrm{T} \rangle}$. \\
+As long as both jets belong to the same $|\eta|$ region, residual effects from jet energy scale differences in data and simulation, where the mean of the asymmetry is shifted and not exactly located at zero, affect both jets the same way and should not have an impact on the resolution measurement. Since residual effects from the jet energy scale become more important if both jets belong to different probe and reference intervals, a slightly modified definition of the asymmetry of
 \begin{equation}
 \label{eq:forwardasymmdef}
   \mathrm{A} = \frac{p^\mathrm{probe}_{\mathrm{T}} - p^\mathrm{ref}_{\mathrm{T}}}{p^\mathrm{probe}_{\mathrm{T}} + p^\mathrm{ref}_{\mathrm{T}}} 
@@ -490,10 +490,8 @@ is used for the reference-and-probe-interval measurement. The transverse momenta
 \label{eq:forwardasymmwidthdef}
   \sigma_\mathrm{A} = \mathrm{RMS}_{98.5\%} = \sqrt{\frac{1}{y_i} \cdot \sum_{i}(A_i-A_\mathrm{mean})^2} 
  \end{equation}
-with the frequency $y_i$ of the individual asymmetry values $A_i$. The sum over $i$ includes all values such that $98.5\%$ of the total asymmetry distribution are covered symmetric around the mean.\\
-The measurement with the reference-and-probe-interval selection is performed taking the three innermost $|\eta|$ regions 0.0--0.5, 0.5--1.1 and 1.1--1.7 as reference intervals each. This allows a measurement of the data-to-simulation ratio also in the $|\eta|$ intervals 2.8--3.2 and 3.2--5.0. In addition, it provides for the innermost $|\eta|$ intervals an enhancement of the available number of events and thus a further reduction of the statistical uncertainties.\\
-The systematic uncertainties of the two new measurements are evaluated according to same-$|\eta|$ measurement by varying a certain aspect in the determination of the data-to-simulation ratio and taking the absolute deviation from the nominal ratio as uncertainty. The variation is done simultaneously for the $\sigma^{ |\eta_{\mathrm{probe}|} \neq |\eta_{\mathrm{ref}}|}_{A}$ value as well as for $\frac{\sigma (p^\mathrm{ref}_\mathrm{T})}{{\langle p_\mathrm{T} \rangle}}$ for each uncertainty source. In general, the resulting uncertainties are of the same order as for the same-$|\eta|$ measurement. \\
-A summary of the resulting data-to-simulation ratios determined in the measurements with the different reference intervals and the corresponding absolute statistical and total systematic uncertainties is shown in Tab.~\ref{tab:results_forward}. A detailed overview of these measurements, listing all individual components of systematic uncertainties, is given in App.~\ref{app:forward_results}. 
+with the frequency $y_i$ of the individual asymmetry values $A_i$. The sum over $i$ includes all values such that $98.5\%$ of the total asymmetry distribution are covered symmetrically around the mean.\\
+The measurement with the reference-and-probe-interval selection is performed taking the three innermost $|\eta|$ regions 0.0--0.5, 0.5--1.1 and 1.1--1.7 as reference intervals. This allows a measurement of the data-to-simulation ratio also in the $|\eta|$ intervals 2.8--3.2 and 3.2--5.0. In addition, it provides an enhancement of the available number of events for the innermost $|\eta|$ intervals and thus a further reduction of the statistical uncertainties.
 \begin{table}[!t]
 \centering
 \caption{Summary of the forward extension measurements with different reference intervals showing the nominal data-to-simulation ratios $c\mathrm{(Data/MC)}$ with absolute statistical and total systematic uncertainty in different probe $|\eta|$ regions.}
@@ -521,12 +519,15 @@ A summary of the resulting data-to-simulation ratios determined in the measureme
 \bottomrule
 \end{tabular}}
 \end{table} 
+\\
+The systematic uncertainties of the two new measurements are evaluated according to same-$|\eta|$ measurement by varying a certain aspect in the determination of the data-to-simulation ratio and taking the absolute deviation from the nominal ratio as uncertainty. The variation is done simultaneously for the $\sigma^{ |\eta_{\mathrm{probe}}| \neq |\eta_{\mathrm{ref}}|}_{A}$ value as well as for $\frac{\sigma (p^\mathrm{ref}_\mathrm{T})}{{\langle p_\mathrm{T} \rangle}}$ for each uncertainty source. In general, the resulting uncertainties are of the same order as for the same-$|\eta|$ measurement. \\
+A summary of the resulting data-to-simulation ratios determined in the measurements with the different reference intervals and the corresponding absolute statistical and total systematic uncertainties is shown in Tab.~\ref{tab:results_forward}. A detailed overview of these measurements, listing all individual components of systematic uncertainties, is given in App.~\ref{app:forward_results}. 
 
 \section{Measurement for Simulated Events Obtained with the \herwig Generator} 
 \label{sec:jer_result_herwig}
-The data-to-simulation ratio has been determined with respect to simulated events obtained from the \pythia generator. However, other generators use for instance different fragmentation models. Thus, it is interesting to study, if the determined data-to-simulation ratio is generator independent. For this study, the data-to-simulation ratio is derived for simulated events not taken from the \pythia generator, but for events obtained from \herwig tune EE3C. This is the same sample as introduced in Sec.~\ref{sec:jer_syst_unc} for the evaluation of the systematic PLI uncertainty. \\
+The data-to-simulation ratio has been determined with respect to simulated events obtained from the \pythia generator. However, other generators use for instance different fragmentation models and it is interesting to study if the determined data-to-simulation ratio is generator independent. For this study, the data-to-simulation ratio is derived for simulated events not taken from the \pythia generator, but for events obtained from \herwig tune EE3C. This is the same sample as introduced in Sec.~\ref{sec:jer_syst_unc} for the evaluation of the systematic PLI uncertainty. \\
 The measurement is performed applying the same selection criteria, as described in Sec.~\ref{subsec:jer_sel_cuts}. Also the pileup reweighting procedure is performed as described there. In Fig.~\ref{fig:control_plots_herwig}, the inclusive $\pt^\mathrm{ave}$ spectrum is compared in data and simulation for simulated events taken from \herwig. The agreement of the \ptave spectrum between data and simulation looks reasonable and exhibits a similar trend as the spectrum in simulated events from \pythia.\\
-The nominal values of the data-to-simulation ratio have been determined with statistical uncertainties with the same-$|\eta|$ requirement as well as for the three different reference-and-probe jet combinations. Since this study is only used as cross-check, no systematic uncertainties have been studied. The resulting data-to-simulation ratios for simulated events taken from \herwig together with statistical uncertainties for the different measurements are summarized in Tab.~\ref{tab:result_herwig}. \\
+The nominal values of the data-to-simulation ratio have been determined with statistical uncertainties with the same-$|\eta|$ requirement as well as for the three different reference-and-probe jet combinations. Since this study is only used as cross-check, no systematic uncertainties are studied. The resulting data-to-simulation ratios for simulated events taken from \herwig together with statistical uncertainties for the different measurements are summarized in Tab.~\ref{tab:result_herwig}. \\
 In general, the obtained data-to-simulation ratios for \herwig agree among each other and are quite similar to the values obtained from \pythia for most $|\eta|$ regions. Some further discussion follows in Sec.~\ref{subsec:jer_combination}.
 \begin{figure}[!p]
   \centering
@@ -612,7 +613,7 @@ The determined ratios vary from 1.06 to 1.40 and exceed the value of one in all 
  
 \subsection{Comparison to Other Measurements}
 \label{subsec:jer_results_comparison}
-Earlier analyses using dijet events for data collected at $\sqrt{s}=7$\tev have obtained similar results showing data-to-simulation ratios greater than one. A complementary approach is followed using $\gamma +\rm{jet}$ events which offer a very precise opportunity to measure the jet resolution due to the excellent resolution of the photon energy. A comparison of the numbers derived in the context of this thesis to the latest results from dijet events obtained at $\sqrt{s}=7$\tev~\cite{thesis:Schroeder} and results for $\gamma +\rm{jet}$ measurements at $\sqrt{s}=8$\tev~\cite{CMS-AN-2013-179} are shown together in Fig.~\ref{fig:result_comparison}.
+Earlier analyses using dijet events for data collected at $\sqrt{s}=7$\tev have obtained similar results showing data-to-simulation ratios greater than one. A complementary approach is followed using $\gamma +\rm{jet}$ events which offer a very precise opportunity to measure the jet resolution due to the excellent resolution of the photon energy. A comparison of the numbers derived in the context of this thesis to the latest results from dijet events obtained at $\sqrt{s}=7$\tev~\cite{thesis:Schroeder} and results for $\gamma +\rm{jet}$ measurements at $\sqrt{s}=8$\tev~\cite{CMS-AN-2013-179} are shown in Fig.~\ref{fig:result_comparison}.
 \begin{figure}[!t]
   \centering
   \begin{tabular}{cc}
@@ -623,36 +624,36 @@ Earlier analyses using dijet events for data collected at $\sqrt{s}=7$\tev have 
   \label{fig:result_comparison}
 \end{figure}
 \\
-The results obtained from different methods and for the different centre of mass energies are well compatible with each other. The main advantage of the dijet measurement presented in this thesis compared to the $\gamma +\rm{jet}$ analysis is that one obtains also results for the outermost $|\eta|$ region. In addition, the total uncertainties in the other $|\eta|$ regions are at a same accuracy or even slightly lower. \\
-In comparison to the $\sqrt{s}=7$\tev results from dijet events, the total uncertainty could be significantly reduced by incorporating the correlation among the different inclusive $\alpha$ regions in the extrapolation procedure. In the previous analyses, the statistical uncertainties were underestimated by not considering the above mentioned correlation. This effect was compensated by introducing a rather conservative systematic uncertainty on the extrapolation to zero additional jet activity. Since the treatment of the statistical uncertainty has been changed in this analysis, the estimation of systematic effects could be adjusted accordingly and lead to the overall reduced uncertainty values summarized in Table~\ref{tab:result}.
+The results obtained from different methods and for the different centre of mass energies are well compatible. The main advantage of the dijet measurement presented in this thesis compared to the $\gamma +\rm{jet}$ analysis is that one obtains also results for the outermost $|\eta|$ region. In addition, the total uncertainties in the other $|\eta|$ regions are at a same accuracy or even slightly better. \\
+In comparison to the $\sqrt{s}=7$\tev results from dijet events, the total uncertainty could be significantly reduced by incorporating the correlation among the different inclusive $\alpha$ regions in the extrapolation procedure. In the previous analyses, the statistical uncertainties were underestimated by not considering the correlation. This effect was compensated by introducing a rather conservative systematic uncertainty on the extrapolation to zero additional jet activity. Since the treatment of the statistical uncertainty has been changed in this analysis, the estimation of systematic effects could be adjusted accordingly and lead to the overall reduced uncertainty.
 
 \subsection{Impact of the Improved JER Measurement}
 \label{subsec:jer_results_impact}
 As mentioned in the introduction of this chapter, the jet transverse-momentum resolution is a key ingredient for several analyses. In this section, the impact of the improved JER measurement is discussed for two use cases. \\
 First, the influence of the JER measurement on the jet energy corrections is examined. As the derived data-to-simulation factors for the resolution feature a dependence on $|\eta|$ and denote difference data and simulation, it is important to propagate their uncertainty to the L2 residual correction of the jet energy scale. The impact of the JER uncertainty on the L2 residual correction is illustrated in Fig.~\ref{fig:result_jec_impact}.  
-\begin{figure}[!h]
+\begin{figure}[!t]
   \centering
   \begin{tabular}{c}
-                \includegraphics[width=0.49\textwidth]{figures/newJER_L2V4_L3fixed-ratio_mod.jpg} 
+                \includegraphics[width=0.55\textwidth]{figures/newJER_L2V4_L3fixed-ratio_mod.jpg} 
   \end{tabular}
-  \caption{Impact of the JER uncertainty on the L2 residual correction. The variation of the correction with respect to the nominal correction factor is shown as a function of the pseudorapidity~\cite{DRathjens}. For further explanation see text.}
+  \caption{Impact of the JER uncertainty on the L2 residual correction. The variation of the correction with respect to the nominal correction factor is shown as a function of the pseudorapidity~\cite{DRathjens}. More information is given in the text.}
   \label{fig:result_jec_impact}
 \end{figure}
 \\
 The blue-shaded band denotes the uncertainty on the L2 residual correction caused by the uncertainty of the JER measurement from 2011 dijet data, as illustrated in Fig.~\ref{fig:result_comparison} (right). Red and green dots illustrate the resulting up and down variation of the L2 residual correction when propagating the JER uncertainty, as determined in the analysis presented in this thesis. Closed and open symbols represent two different methods used to derive the L2 residual correction. Especially in the forward region of the detector, the uncertainty is reduced by about 50\%. \\
-Furthermore, the improved jet resolution measurement has a major impact on the determination of the top-quark mass. The currently most precise single measurement of the top-quark mass from CMS is performed in the lepton+jets channel and yields a top quark mass of $m_t = 172.04 \pm 0.19\; \mathrm{(stat.+JSF)} \pm 0.75\;\mathrm{(syst.)}$\gev~\cite{CMS-PAS-TOP-14-001}. The propagated uncertainty of the jet transverse-momentum resolution is among the dominant systematic uncertainties and amounts to 0.26\gev when considering the data-to-simulation scale factors as measured with the 2011 dijet data. The improved uncertainty on the JER scale factors decreases the contribution to the systematic uncertainties of the top-quark mass measurement from 0.26\gev to 0.11\gev. Accordingly, the total systematic uncertainty drops from 0.75\gev to 0.71\gev~\cite{MSeidel}. Consequently, the precision of the top-quark mass measurement in the above mentioned lepton+jets channel reaches the accuracy of the currently overall most precise single measurement of the top-quark mass which yields a total uncertainty of 0.76\gev, as performed by the \dzero experiment~\cite{Abazov:2014dpa}.   
+The improved jet resolution measurement has also a major impact on the determination of the top-quark mass. The currently most precise single measurement of the top-quark mass from CMS is performed in the lepton+jets channel and yields a top quark mass of $m_t = 172.04 \pm 0.19\; \mathrm{(stat.+JSF)} \pm 0.75\;\mathrm{(syst.)}$\gev~\cite{CMS-PAS-TOP-14-001}. The propagated uncertainty of the jet transverse-momentum resolution is among the dominant systematic uncertainties and amounts to 0.26\gev when considering the data-to-simulation scale factors as measured with the 2011 dijet data. The improved uncertainty on the JER scale factors decreases the contribution to the systematic uncertainties of the top-quark mass measurement from 0.26\gev to 0.11\gev. Accordingly, the total systematic uncertainty drops from 0.75\gev to 0.71\gev~\cite{MSeidel}. Consequently, the precision of the top-quark mass measurement in the above mentioned lepton+jets channel reaches the accuracy of the currently overall most precise single measurement of the top-quark mass which yields a total uncertainty of 0.76\gev, as performed by the \dzero experiment~\cite{Abazov:2014dpa}.   
 
 \section{Adjustment of the MC-Resolution to Data}
 \label{sec:jer_adjustment}
 The determined data-to-simulation ratios as given in Tab.~\ref{fig:result_2012} can be used to adjust the resolution in simulated events to match the measured resolution in data. This can be done with different approaches depending on what the actual purpose of the analysis is. \\
-If a correspondence of the resolution in data and simulation per jet is needed (as it was used in Sec.~\ref{sec:jer_validation_ratio}), each detector-level jet in the simulation can be scaled according to the momentum difference to the respective generator-level jet. Since the resolution is proportional to this momentum difference, an adjustment of the resolution to data corresponds to scaling the momentum difference by the measured scale factor as expressed already in Eq.~\ref{eq:smear_gen}. \\
+If a correspondence of the resolution in data and simulation per jet is needed (as it was used in Sec.~\ref{sec:jer_validation_ratio}), each detector-level jet in the simulation can be scaled according to the momentum difference to the respective generator-level jet. Since the resolution is proportional to this momentum difference, an adjustment of the resolution to data corresponds to scaling the momentum difference by the measured scale factor as expressed in Eq.~\ref{eq:smear_gen}. \\
 Alternatively, the resolution in simulation can be adjusted by convolution with a Gaussian. Taking a Gaussian function with appropiate width $\sigma_{c}$, the width of the response function after convolution corresponds to the resolution in data according to 
 \begin{equation}
 \sigma_{c} = \sqrt{c^2-1} \cdot \left( \frac{\sigma_{MC}}{\pt} \right) \; .
 \label{eq:res_adjust}
 \end{equation}
 Consequently, this method can only be used, if $c > 1$. \\
-Further discussion about the adjustment of the resolution in simulation to data can be found in Section~\ref{subsec:RA2_QCD} where this is actually applied in the estimation of background contributions arising from QCD multijet events to a search for new physics in an all-jet final state.  
+Further discussion about the adjustment of the resolution in simulation to data can be found in Sec.~\ref{subsec:RA2_QCD} where this is applied in the estimation of background contributions arising from QCD multijet events to a search for new physics in an all-jet final state.  
 
 %\section{Impact of the Resolution Measurement on Other Analyses}
 %\label{sec:jer_impact}
