--- a/definitions.tex
+++ b/definitions.tex
@@ -238,7 +238,7 @@
 
 % Programmes
 \newcommand{\isajet}{\textsc{IsaJet}\xspace}
-\newcommand{\madgraph}{\textsc{Madgraph}\xspace}
+\newcommand{\madgraph}{\textsc{MadGraph}\xspace}
 \newcommand{\prospino}{\textsc{Prospino}\xspace}
 \newcommand{\pythia}{\textsc{Pythia}\xspace}
 \newcommand{\herwig}{\textsc{Herwig++}\xspace}
